force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Collaboration_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collaboration Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects (Collaboration Opportunity)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>