force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Milestone_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Revenue__c</fullName>
    <label>Milestone Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>