force-app/main/default/objects/MPM4_BASE__Milestone1_Project__c/fields/Opportunity_Exists__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Exists__c</fullName>
    <formula>IF(ISBLANK(MPM4_BASE__Opportunity__c) ,false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Exists</label>
    <type>Checkbox</type>
</CustomField>